--- a/styles.css
+++ b/styles.css
@@ -222,7 +222,8 @@ footer {
     display: flex; 
     align-items: center; 
     justify-content: flex-end;
-    width: 65%;
+    margin-right: 50px;
+  }
  }
 
  .header-row {
@@ -235,6 +236,4 @@ footer {
   body {
     max-width: 920px;  
     margin: 0 auto;
-    width: 100%;
-  }
 }
