--- a/styles.css
+++ b/styles.css
@@ -222,8 +222,7 @@ footer {
     display: flex; 
     align-items: center; 
     justify-content: flex-end;
-    margin-right: 10px;
-  }
+    margin-right: 50px;
  }
 
  .header-row {
@@ -236,4 +235,6 @@ footer {
   body {
     max-width: 920px;  
     margin: 0 auto;
+    width: 100%;
+  }
 }
